[project]
name = "moco-voice-mcp"
version = "0.1.0"
description = "mocoVoice MCP"
authors = [{ name = "mocomoco Inc." }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
]


[project.scripts]
moco-voice-mcp = "moco_voice_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

